Gerundete Ecken des Polygonzuges